--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,9 @@
             "type": "vcs",
             "url": "https://github.com/Karlis-Juskovs/common-module"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^11.3",
+        "orchestra/testbench": "^9.5"
+    }
 }
